Adding from email

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,9 @@ CLAUDE_API_KEY=your_claude_api_key_here
 # Resend API key for email functionality
 RESEND_API_KEY=your_resend_api_key_here
 
+# Resend sender email (must be verified in Resend dashboard)
+RESEND_FROM_EMAIL=your_verified_email@yourdomain.com
+
 # Supabase configuration
 NEXT_PUBLIC_SUPABASE_URL=your_supabase_url_here
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key_here 
